--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
         <section id="inicio" class="hero">
-            <h1 class="hero__title">House Battery <strong>Centro Tecnológico de Baterías y Proyectos Electrónicos</strong></h1>
+            <h1 class="hero__title"><span class="hero__title--brand" >House Battery </span><strong>Centro Tecnológico de Baterías y Proyectos Electrónicos</strong></h1>
             <p class="hero__description">
                 Especialistas en <strong>soldadura de punto</strong> y ensamble de baterías de Litio a medida. Restauramos la energía de tu patineta o herramienta. Además, contamos con <strong>Línea Estudiantil</strong> para <strong>diseño de proyectos</strong> y venta de instrumentación.
             </p>
@@ -79,8 +79,28 @@
         <section id="nosotros" class="about">
             <h2 class="about__title">Más que una Tienda, un Laboratorio de Energía</h2>
             <div class="about__content">
-                <p>Ubicados en el corazón de la tecnología en <strong>Bogotá (Calle 21)</strong>...</p>
-                <p>Somos el punto de encuentro para <strong>ingenieros y estudiantes</strong>...</p>
+                <h2>House Battery: El corazón de la tecnología en Bogotá</h2>
+        
+                <p>
+                    Ubicados en la <strong>Calle 21</strong>, nos diferenciamos por nuestra <strong>capacidad técnica</strong>. En <strong>House Battery</strong> no improvisamos: contamos con maquinaria especializada de <strong>soldadura por puntos de alta frecuencia</strong> para garantizar ensambles de baterías <strong>seguros, duraderos y profesionales</strong>.
+                </p>
+
+                <hr>
+
+                <h3>Soluciones para Ingeniería y Movilidad</h3>
+                <p>
+                    Somos el punto de encuentro ideal para <strong>ingenieros y estudiantes</strong>. Ya sea que necesites:
+                </p>
+                
+                <ul>
+                    <li>Revivir la batería de tu <strong>Scooter Eléctrico</strong>.</li>
+                    <li>Cambiar la pila de tu <strong>UPS</strong>.</li>
+                    <li>Conseguir el <strong>multímetro y componentes</strong> esenciales para tu carrera.</li>
+                </ul>
+
+                <blockquote>
+                    <strong>Aquí tienes la solución garantizada.</strong>
+                </blockquote>
             </div>
         </section>
 
@@ -122,5 +142,10 @@
             </ul>
         </address>
     </footer>
+    <a href="https://wa.me/573138019357?text=Hola%20House%20Battery,%20quisiera%20cotizar%20un%20servicio..." class="btn-whatsapp" target="_blank" aria-label="Chat en WhatsApp">
+        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="white">
+            <path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372-.272.297-1.04 1.017-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z"/>
+        </svg>
+    </a>
 </body>
 </html>
