--- a/index.html
+++ b/index.html
@@ -147,46 +147,103 @@
         </section>
         <section id="ingenieria" class="engineer-corner">
             <div class="engineer-container reveal">
+
+                <div class="engineer-visual">
+                    <div class="blueprint-box">
+                        <div class="blueprint-scanline"></div>
+                        <img src="assets/img/proyecto-estudiantil-arduino-litio.webp"
+                            alt="Prototipo electrónico con Arduino y Litio" class="blueprint-img">
+                        <div class="blueprint-data">
+                            <span>SYS_CHK: OK</span>
+                            <span>PWR: 100%</span>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="engineer-content">
-                    <span class="engineer-badge">Ingeniería Original</span>
-                    <h2 class="engineer-title">El Laboratorio del Ingeniero</h2>
-                    <p class="engineer-lead">
-                        Donde la experiencia técnica se encuentra con la nueva era de Arduino y la robótica.
-                    </p>
-                    
+                    <div class="engineer-badge">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <circle cx="12" cy="12" r="3"></circle>
+                            <path
+                                d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z">
+                            </path>
+                        </svg>
+                        Ingeniería Aplicada
+                    </div>
+                    <h2 class="engineer-title">Proyectos Estudiantiles</h2>
+
+                    <blockquote class="engineer-lead">
+                        "Las grandes revoluciones en energía y tecnología al servicio de la humanidad... empiezan con un
+                        proyecto en el aula. Nosotros te damos la energía para hacerlo realidad."
+                    </blockquote>
+
                     <p class="engineer-text">
-                        Bajo la dirección de nuestro Ingeniero Senior, apoyamos a estudiantes y entusiastas en el desarrollo de:
+                        ¿Estás atascado con tu proyecto de universidad o colegio? Te brindamos asesoría técnica, componentes y
+                        ensambles para que tu idea funcione a la perfección:
                     </p>
 
                     <ul class="engineer-list">
                         <li>
-                            <span class="check-icon">✅</span> 
-                            <span>Diseño de circuitos impresos (PCB) y prototipado.</span>
+                            <div class="engineer-list__icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                                    stroke="#00aaff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <rect x="3" y="11" width="18" height="10" rx="2"></rect>
+                                    <circle cx="12" cy="5" r="2"></circle>
+                                    <path d="M12 7v4"></path>
+                                    <line x1="8" y1="16" x2="8" y2="16"></line>
+                                    <line x1="16" y1="16" x2="16" y2="16"></line>
+                                </svg>
+                            </div>
+                            <div class="engineer-list__text">
+                                <strong>Robótica y Automatización:</strong> Sensores, motores y módulos para Arduino o Raspberry
+                                Pi.
+                            </div>
                         </li>
                         <li>
-                            <span class="check-icon">✅</span> 
-                            <span>Programación avanzada en Arduino y Microcontroladores.</span>
+                            <div class="engineer-list__icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                                    stroke="#00aaff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <rect x="6" y="6" width="12" height="14" rx="2" ry="2"></rect>
+                                    <line x1="9" y1="2" x2="9" y2="6"></line>
+                                    <line x1="15" y1="2" x2="15" y2="6"></line>
+                                    <line x1="12" y1="11" x2="12" y2="15"></line>
+                                    <line x1="10" y1="13" x2="14" y2="13"></line>
+                                </svg>
+                            </div>
+                            <div class="engineer-list__text">
+                                <strong>Packs de Litio a Medida:</strong> Energía portátil exacta para carritos, drones o
+                                prototipos IoT.
+                            </div>
                         </li>
                         <li>
-                            <span class="check-icon">✅</span> 
-                            <span>Asesoría personalizada para proyectos de grado y robótica.</span>
+                            <div class="engineer-list__icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                                    stroke="#00aaff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <circle cx="12" cy="12" r="10"></circle>
+                                    <line x1="12" y1="16" x2="12" y2="12"></line>
+                                    <line x1="12" y1="8" x2="12.01" y2="8"></line>
+                                </svg>
+                            </div>
+                            <div class="engineer-list__text">
+                                <strong>Asesoría Técnica:</strong> Te explicamos cómo funciona para que domines tu sustentación.
+                            </div>
                         </li>
                     </ul>
 
                     <div class="engineer-cta">
-                        <p>¿Tienes un proyecto en mente? Habla con el experto:</p>
-                        <a href="https://wa.me/573138019357?text=Hola%20Ingeniero,%20vengo%20de%20la%20web%20y%20necesito%20asesoría..." 
-                        class="btn btn--engineer" target="_blank">
-                            Consultar con el Ingeniero
+                        <a href="https://wa.me/573138019357?text=Hola%20House%20Battery,%20tengo%20un%20proyecto%20estudiantil%20y%20necesito%20ayuda%20con..."
+                            class="btn btn--engineer" target="_blank">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                style="margin-right: 8px; vertical-align: text-bottom;">
+                                <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+                            </svg>
+                            Cotizar mi Proyecto Estudiantil
                         </a>
                     </div>
                 </div>
 
-                <div class="engineer-visual">
-                    <div class="blueprint-box">
-                        <img src="assets/img/ingeniero-senior-proyectos-electronicos.webp" alt="Prototipo electrónico de ingeniería" class="blueprint-img">
-                    </div>
-                </div>
             </div>
         </section>
 
