Se mejora la seccion de hero, haciendo que las imagenes cambien cada 5 segundos

--- a/index.html
+++ b/index.html
@@ -38,30 +38,32 @@
     </header>
 
     <main>
-        <section id="inicio" class="hero">
-            <div class="hero__content reveal">
-                <h1 class="hero__title">
-                    <span class="hero__title--brand">House Battery</span>
-                    Soluciones de Energía & Tecnología Profesional
-                </h1>
-                
-                <p class="hero__description">
-                    Distribuidor autorizado de baterías secas y gel <strong>(Netion, Movil Tronic)</strong>. 
-                    Especialistas en ensamble de <strong>Litio</strong>, mantenimiento de UPS e instrumentación <strong>(Fluke, UNI-T)</strong>.
-                    <br><br>
-                    <em>Todo en un solo lugar, sin intermediarios.</em>
-                </p>
-                
-                <div class="hero__actions">
-                    <a class="btn btn--primary" href="https://wa.me/573138019357?text=Hola%20House%20Battery,%20me%20interesa%20cotizar%20baterías%20o%20equipos..." target="_blank">
-                        Cotizar Ahora
-                    </a>
-                    <a class="btn btn--secondary" href="#servicios">
-                        Ver Productos
-                    </a>
-                </div>
+    <section id="inicio" class="hero">
+        <div class="hero-slider" id="heroSlider">
+            <div class="hero-slide active" style="background-image: url('assets/img/hero-01-workshop.webp');"></div>
+            <div class="hero-slide" style="background-image: url('assets/img/hero-02-custompack.webp');"></div>
+            <div class="hero-slide" style="background-image: url('assets/img/hero-03-emobility.webp');"></div>
+            <div class="hero-slide" style="background-image: url('assets/img/hero-04-engineering.webp');"></div>
+            <div class="hero-slide" style="background-image: url('assets/img/hero-05-storage.webp');"></div>
+        </div>
+
+        <div class="hero-overlay"></div>
+
+        <div class="hero-content reveal">
+            <h1 class="hero__title">
+                <span class="hero__title--brand">House Battery</span>
+                Tu Energía, A Medida.
+            </h1>
+            <p class="hero__description">
+                Diseño, ensamblaje y reparación profesional de baterías de litio para movilidad eléctrica, herramientas y
+                proyectos especiales. Potencia confiable, diseñada para ti.
+            </p>
+            <div class="hero__actions">
+                <a href="#contacto" class="btn btn--primary">Cotizar Proyecto</a>
+                <a href="#servicios" class="btn btn--secondary">Ver Servicios</a>
             </div>
-        </section>
+        </div>
+    </section>
 
         <section class="brands-slider">
             <h2 class="brands__title">Repuestos y Equipos Originales</h2>
