Se agrega seccion de comentarios

--- a/index.html
+++ b/index.html
@@ -344,6 +344,104 @@
             </div>
         </section>
 
+        <section id="testimonios" class="testimonials">
+            <div class="testimonials__container reveal">
+                <div class="testimonials__header">
+                    <h2 class="testimonials__title">Clientes Satisfechos</h2>
+                    <p class="testimonials__subtitle">Opiniones reales de nuestra comunidad en Google</p>
+                </div>
+
+                <div class="testimonials__grid">
+                    <article class="testimonial-card">
+                        <div class="testimonial-card__stars">★★★★★</div>
+                        <p class="testimonial-card__text">
+                            "Excelente servicio. Repararon la batería de mi scooter Xiaomi en tiempo récord. Se nota que conocen la tecnología de litio a fondo. Recomendados 100%."
+                        </p>
+                        <div class="testimonial-card__author">
+                            <div class="testimonial-card__avatar">CR</div>
+                            <div>
+                                <h4 class="testimonial-card__name">Carlos Rodríguez</h4>
+                                <span class="testimonial-card__date">Hace 2 meses</span>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="testimonial-card">
+                        <div class="testimonial-card__stars">★★★★★</div>
+                        <p class="testimonial-card__text">
+                            "Compré un pack de celdas para un proyecto de robótica de la universidad. La asesoría técnica de los ingenieros fue clave para que todo funcionara."
+                        </p>
+                        <div class="testimonial-card__author">
+                            <div class="testimonial-card__avatar">AM</div>
+                            <div>
+                                <h4 class="testimonial-card__name">Andrea Martínez</h4>
+                                <span class="testimonial-card__date">Hace 3 semanas</span>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="testimonial-card">
+                        <div class="testimonial-card__stars">★★★★★</div>
+                        <p class="testimonial-card__text">
+                            "El mejor lugar en Bogotá para soldadura de punto profesional. Precios justos y componentes originales. Mi UPS quedó como nueva."
+                        </p>
+                        <div class="testimonial-card__author">
+                            <div class="testimonial-card__avatar">JP</div>
+                            <div>
+                                <h4 class="testimonial-card__name">Jorge Pulido</h4>
+                                <span class="testimonial-card__date">Hace 4 días</span>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+
+                <div class="testimonials__cta">
+                    <a href="https://goo.gl/maps/tu-link-de-google" target="_blank" class="testimonials__link">
+                        Ver más reseñas en Google Maps →
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <section id="faq" class="faq-section">
+            <div class="faq-container reveal">
+                <div class="faq-header">
+                    <h2 class="faq-title">Preguntas Frecuentes</h2>
+                    <p class="faq-subtitle">Resolvemos tus dudas técnicas al instante</p>
+                </div>
+
+                <div class="faq-grid">
+                    <details class="faq-item">
+                        <summary class="faq-question">¿Cuánto tiempo tarda la reparación de una batería?</summary>
+                        <div class="faq-answer">
+                            <p>El diagnóstico inicial tarda 24 horas. Según la complejidad (rebalanceo o cambio de celdas), la entrega final se realiza en un promedio de 2 a 4 días hábiles.</p>
+                        </div>
+                    </details>
+
+                    <details class="faq-item">
+                        <summary class="faq-question">¿Tienen garantía los trabajos de soldadura de punto?</summary>
+                        <div class="faq-answer">
+                            <p>Sí. Todos nuestros ensambles y reconstrucciones de packs de litio cuentan con una garantía de 3 a 6 meses por defectos de fabricación y puntos de soldadura.</p>
+                        </div>
+                    </details>
+
+                    <details class="faq-item">
+                        <summary class="faq-question">¿Realizan envíos de baterías a otras ciudades de Colombia?</summary>
+                        <div class="faq-answer">
+                            <p>Sí, realizamos envíos nacionales siguiendo los protocolos de seguridad para el transporte de celdas de litio. El costo del envío corre por cuenta del cliente.</p>
+                        </div>
+                    </details>
+
+                    <details class="faq-item">
+                        <summary class="faq-question">¿Puedo llevar mi propio BMS para el ensamble?</summary>
+                        <div class="faq-answer">
+                            <p>Aceptamos componentes externos previo diagnóstico técnico. Sin embargo, recomendamos usar nuestros BMS programables para asegurar la compatibilidad y garantía total.</p>
+                        </div>
+                    </details>
+                </div>
+            </div>
+        </section>
+
         <section id="contacto" class="contact reveal">
             <h2 class="contact__title">Visítanos o Escríbenos</h2>
             
