Se arreglan animaciones de index

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
     </section>
 
-        <section class="brands-slider">
+        <section class="brands-slider reveal">
             <h2 class="brands__title">Repuestos y Equipos Originales</h2>
             
             <div class="brands-slider__track">
@@ -91,7 +91,7 @@
             </div>
         </section>
 
-        <section id="servicios" class="services">
+        <section id="servicios" class="services reveal">
             <div class="services__header">
                 <h2 class="services__title">Especialidades Técnicas</h2>
                 <p class="services__subtitle">Ingeniería aplicada para empresas y movilidad eléctrica</p>
@@ -629,7 +629,7 @@
         </div>
 
         <div class="footer__bottom">
-            <p>&copy; 2026 House Battery. Todos los derechos reservados.</p>
+            <p>© 2026 House Battery. Todos los derechos reservados.</p>
         </div>
     </footer>
     <a href="https://wa.me/573138019357?text=Hola%20House%20Battery,%20quisiera%20cotizar%20un%20servicio..." class="btn-whatsapp" target="_blank" aria-label="Chat en WhatsApp">
