Se arregla problema de la hamburguesa en catalogo

--- a/catalogo.html
+++ b/catalogo.html
@@ -64,5 +64,6 @@
     </div>
 
     <script type="module" src="js/catalogo.js"></script>
+    <script src="js/main.js"></script> </body>
 </body>
 </html>
